# SAT

./: CMakeLists.txt  Makefile  main.cpp
src/: ChaffTwoWatchedLiterals.cxx  ChaffTwoWatchedLiterals.hxx  DimacsFormatException.cxx  DimacsFormatException.hxx  DpllUpImplementation.cxx  DpllUpImplementation.hxx  GraspTwlImplementation.cxx  GraspTwlImplementation.hxx  RawDpllImplementation.cxx  RawDpllImplementation.hxx  Solver.cxx  Solver.hxx  SolverResult.hxx  TwoWatchedLiterals.cxx  TwoWatchedLiterals.hxx  Variable.hxx
